--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -209,6 +209,7 @@ table.datatable-responsive-search-validation thead .sorting_asc:after {
 	-webkit-box-shadow: 0px 2px 10px rgba(50, 50, 50, 0.5);
     -moz-box-shadow: 0px 2px 10px rgba(50, 50, 50, 0.5);
     box-shadow: 0px 2px 10px rgba(50, 50, 50, 0.5);
+    z-index: 200;
 }
 
 .no-touch .cd-top:hover {
@@ -273,8 +274,29 @@ table.datatable-responsive-search-validation thead .sorting_asc:after {
 	margin-right: 0;
 	background: transparent;
     border: none;
+    
 }
 
 .tooltip {
 	z-index: 99;
 }
+
+#loadingImg {
+	width: 100%;
+	height: 100%;
+	position:fixed;
+    top: 0;
+    left: 0;
+    background-color: transparent;
+    z-index: 100;
+}
+
+table.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before, table.dataTable.dtr-inline.collapsed>tbody>tr>th:first-child:before {
+	top: inherit;
+}
+
+.dtr-data {
+	display: block;
+	line-height: 1;
+}
+ 
