--- a/src/main/resources/templates/accreditamento/accreditamentoAllegatiEdit.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoAllegatiEdit.html
@@ -35,6 +35,7 @@
 							<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, attoCostitutivo, ${++counter}, null, true)" ></th:block>
 														
 							<!-- allegato 2 (esperienza formazione in ambito sanitario) -->
+							<div class="divider-dashed"></div>
 							<div class="col-md-3 col-sm-3 col-xs-4 model-link" id="esempio_esperienzaFormazione">
 								<i class="fa fa-file-text"></i>
 								<a id="esperienzaFormazione_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.esperienzaFormazioneModel}|}"></a>
@@ -42,6 +43,7 @@
 							<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, esperienzaFormazione, ${++counter}, null, true)" ></th:block>
 							
 							<!-- allegato 3 (utilizzo di sedi, strutture ed attrezzature di altro soggetto) -->
+							<div class="divider-dashed"></div>
 							<div class="col-md-3 col-sm-3 col-xs-4 model-link" id="esempio_utilizzo">
 								<i class="fa fa-file-text"></i>
 								<a id="utilizzo_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.utilizzoModel}|}"></a>
@@ -49,6 +51,7 @@
 							<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, utilizzo, ${++counter}, null, true)" ></th:block>
 							
 							<!-- allegato 4 (sistema informatico dedicato alla formazione in ambito sanitario) -->
+							<div class="divider-dashed"></div>
 							<div class="col-md-3 col-sm-3 col-xs-4 model-link" id="esempio_sistemaInformatico">
 								<i class="fa fa-file-text"></i>
 								<a id="sistemaInformatico_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.sistemaInformaticoModel}|}"></a>
@@ -56,6 +59,7 @@
 							<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, sistemaInformatico, ${++counter}, null, true)" ></th:block>
 							
 							<!-- allegato 5 (piano di qualità) -->
+							<div class="divider-dashed"></div>
 							<div class="col-md-3 col-sm-3 col-xs-4 model-link" id="esempio_pianoQualita">
 								<i class="fa fa-file-text"></i>
 								<a id="pianoQualita_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.pianoQualitaModel}|}"></a>
@@ -63,6 +67,7 @@
 							<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, pianoQualita, ${++counter}, null, true)" ></th:block>
 								
 							<!-- allegato 6 (dichiarazione del legale rappresentante) -->
+							<div class="divider-dashed"></div>
 							<div class="col-md-3 col-sm-3 col-xs-4 model-link" id="esempio_dichiarazioneLegale">
 								<i class="fa fa-file-text"></i>
 								<a id="dichiarazioneLegale_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.dichiarazioneLegaleModel}|}"></a>
