--- a/src/main/resources/templates/segreteria/uploadModelli.html
+++ b/src/main/resources/templates/segreteria/uploadModelli.html
@@ -25,18 +25,23 @@
 							<th:block th:include="fragments/allegati :: allegati(modelliAllegatiWrapper, attoCostitutivo, null, null, true)" ></th:block>
 														
 							<!-- allegato 2 (esperienza formazione in ambito sanitario) -->
+							<div class="divider-dashed"></div>
 							<th:block th:include="fragments/allegati :: allegati(modelliAllegatiWrapper, esperienzaFormazione, null, null, true)" ></th:block>
 							
 							<!-- allegato 3 (utilizzo di sedi, strutture ed attrezzature di altro soggetto) -->
+							<div class="divider-dashed"></div>
 							<th:block th:include="fragments/allegati :: allegati(modelliAllegatiWrapper, utilizzo, null, null, true)" ></th:block>
 							
 							<!-- allegato 4 (sistema informatico dedicato alla formazione in ambito sanitario) -->
+							<div class="divider-dashed"></div>
 							<th:block th:include="fragments/allegati :: allegati(modelliAllegatiWrapper, sistemaInformatico,null, null, true)" ></th:block>
 							
 							<!-- allegato 5 (piano di qualità) -->
+							<div class="divider-dashed"></div>
 							<th:block th:include="fragments/allegati :: allegati(modelliAllegatiWrapper, pianoQualita, null, null, true)" ></th:block>
 								
 							<!-- allegato 6 (dichiarazione del legale rappresentante) -->
+							<div class="divider-dashed"></div>
 							<th:block th:include="fragments/allegati :: allegati(modelliAllegatiWrapper, dichiarazioneLegale, null, null, true)" ></th:block>	
 						</form>
 					</div>
