--- a/src/main/resources/templates/accreditamento/accreditamentoList.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoList.html
@@ -35,9 +35,9 @@
 							</thead>
 							<tbody th:unless="${#lists.isEmpty(accreditamentoList)}" th:remove="all-but-first">
 								<tr th:each="accreditamento : ${accreditamentoList}">
-									<td><a th:text="${accreditamento.tipoDomanda}"
+									<td><a th:text="${accreditamento.tipoDomanda.nome}"
 										th:href="@{|/accreditamento/${accreditamento.id}|}">Provvisorio/Standard</a></td>
-									<td th:text="${accreditamento.stato}">Accettata</td>
+									<td th:text="${accreditamento.stato.nome}">Accettata</td>
 									<td th:text="${accreditamento.dataInvio}">22/05/2014</td>
 									<td th:text="${accreditamento.dataValutazione}">24/05/2014</td>
 									<td th:text="${accreditamento.dataScadenza}">24/05/2016</td>
