Inizio della parte di validazione del piano formativo annuale

--- a/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
@@ -428,7 +428,7 @@
 					</div>
 				</div>
 			</div>
-			<script>
+			<script th:inline="javascript">
 				//cambia la stringa per i pulsanti e il contatore
 				$(document).ready(function() {
 					$('select').selectpicker({
