--- a/src/main/resources/templates/evento/pianoFormativoShow.html
+++ b/src/main/resources/templates/evento/pianoFormativoShow.html
@@ -5,21 +5,42 @@
 <head lang="it">
 </head>
 <body>
-	<div layout:fragment="content" th:with="counter=${datiAccreditamentoWrapper.idOffset - 1}">
+	<div layout:fragment="content">                 <!-- TODO: rimuovere ? dal wrapper, collegare i wrapper/thymeleaf giusti, sistemare gli url dei servizi -->
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.inserimento_piano formativo}">Inserimento del piano formativo annuale</h2>
+						<h2 th:text="#{label.inserimento_piano_formativo}">Piano formativo relativo all'anno xxx</h2>
 						<div class="pull-right buttons-header">
-							<th:block th:unless="${#lists.isEmpty(datiAccreditamentoWrapper.idEditabili)}">
-								<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formAccreditamento" type="submit"></button>
+							<th:block th:unless="${#lists.isEmpty(pianoFormativoWrapper?.idEditabili)}">
+								<a class="btn btn-success pull-right" th:text="#{label.salva}" th:href="@{|/accreditamento/${pianoFormativoWrapper?.accreditamentoId}/pianoFormativo/save|}"></a>
 							</th:block>
-							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${datiAccreditamentoWrapper.accreditamentoId}|}"></a>
+							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${pianoFormativoWrapper?.accreditamentoId}|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
 					<div class="x_content">
+						<table id="piano-formativo-table" class="datatable-responsive-piano-formativo table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+							<thead>
+								<tr>
+									<th th:text="#{label.tipologia_evento}">Tipologia dell'evento</th>
+									<th th:text="#{label.rimuovi}">Rimuovi</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="evento, row : ${pianoFormativoWrapper?.listaEventi}">
+									<td th:unless="${evento.new}"><a th:text="#{evento.titolo}" th:href="@{|/accreditamento/${pianoFormativoWrapper?.accreditamento.id}/provider/${pianoFormativoWrapper?.provider.id}/evento/${evento.id}/edit|}"></a></td>
+									<td th:if="${evento.new}"><a th:text="#{label.evento_comitato}" th:href="@{|/accreditamento/${pianoFormativoWrapper?.accreditamento.id}/provider/${pianoFormativoWrapper?.provider.id}/evento/new|}"></a></td>
+									<td th:unless="${evento.new}">
+										<a th:href="@{|/accreditamento/${/accreditamento/${pianoFormativoWrapper?.accreditamento.id}/provider/${pianoFormativoWrapper?.provider.id}/evento/delete|}"><span class="fa fa-trash" th:title="#{label.elimina}"></span></a>
+									</td>
+									<td th:if="${evento.new}">
+										<a><span class="fa fa-trash disabled"></span></a>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+						<a th:if="${pianoFormativoWrapper?.pianoFormativoEditabile}" th:text="#{label.aggiungi_evento}" class="btn btn-primary with-margin-top" th:href="@{|/accreditamento/${pianoFormativoWrapper?.accreditamento.id}/provider/${pianoFormativoWrapper?.provider.id}/evento/new|}"></a>
 					</div>
 				</div>
 			</div>
@@ -27,3 +48,5 @@
 	</div>
 </body>
 </html>
+
+
